--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,12 @@ cmake_minimum_required(VERSION 3.15.1)
 project(ZeekAgent)
 
 if ( CMAKE_SYSTEM_NAME STREQUAL "Darwin" )
-    set(CMAKE_OSX_DEPLOYMENT_TARGET 11.0 CACHE STRING "Minimum macOS version" FORCE) # Big Sur
+    if ( NOT CMAKE_OSX_DEPLOYMENT_TARGET )
+        # Swift needs a minumum version, use current platform's major version by default.
+        cmake_host_system_information(RESULT macos_version QUERY OS_RELEASE)
+        string(REGEX REPLACE "[0-9]+$" "0" macos_version "${macos_version}")
+        set(CMAKE_OSX_DEPLOYMENT_TARGET "${macos_version}" CACHE STRING "Minimum macOS version" FORCE)
+    endif ()
 
     # Hack to avoid CMake telling us that it doesn't support universal binaries for Swift.
     # We later enable universal binaries explicitly ourselves for Swift code.
