Support attaching interactive console to a running agent.
By default, an agent now creates a UNIX socket for its console that an
external client can connect to. To connect to an already running
agent, execute `zeek-agent -r` on the same machine (note that client
and server must be running as the same user, probably `root`). Client
and server can specify a different socket path through `-s <PATH>`.
The environment variable `ZEEK_AGENT_SOCKET` can be set to specify the
path as well.

Remote consoles aren't support on Windows yet.

Internally, we switch the classic local console over to the same IPC
mechanism we now use for remote consoles, so that there's only one
implementation. For Windows, where actual IPC isn't implemented yet,
we provide a dummy implementation for this purpose that just forwards
data inside the main (and only) process.

Closes #8.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -5,4 +5,11 @@ target_sources(zeek-agent
         ascii-table.cc
         helpers.cc
         result.cc
+        socket.cc
 )
+
+if ( HAVE_POSIX )
+    target_sources(zeek-agent PRIVATE socket.posix.cc)
+else ()
+    target_sources(zeek-agent PRIVATE socket.no-ipc.cc)
+endif ()
