--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,13 +113,19 @@ jobs:
           path: build/dist/${{env.ZA_DIST}}
 
   # TODO: Install Zeek and run Zeek tests.
-  release_macos_11:
-    runs-on: macos-11
+  release_macos_13:
+    runs-on: macos-13
     environment: ${{ (github.ref == 'refs/heads/main' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-dev'))) && 'release' || '' }}
 
     steps:
       - name: Prepare
         run: |
+          brew update
+          brew unlink python
+          brew link --overwrite python
+          brew upgrade --force python
+          brew upgrade --force php
+
           brew upgrade
           brew install ninja ccache
           pip3 install btest zkg
@@ -341,7 +347,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     if: (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-dev'))
-    needs: [debug_ubuntu_latest, release_alpine_3_15_static, release_macos_11, release_windows_2022, release_source]
+    needs: [debug_ubuntu_latest, release_alpine_3_15_static, release_macos_13, release_windows_2022, release_source]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
