--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,11 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      3rdparty:
+        patterns:
+        - "3rdparty/*"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
