Extend list of artifacts included into release.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -409,3 +409,5 @@ jobs:
           body_path: ${{ runner.temp }}/release-msg
           files: |
             artifacts/*/*.tar.gz
+            artifacts/*/*.dmg
+            artifacts/*/*.msi
